--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,7 +1,7 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
     %h2= restaurant.name
-
+    = link_to restaurant.name, restaurant_path(restaurant)
 - else
   %h1 No restaurants yet!
 
