--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -2,7 +2,9 @@
   - @restaurants.each do |restaurant|
     %h2= restaurant.name
     = link_to restaurant.name, restaurant_path(restaurant)
-    = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
+    = link_to("Edit #{restaurant.name}", edit_restaurant_path(restaurant))
+    = link_to("Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete)
+
 - else
   %h1 No restaurants yet!
 
