Now successfully linked users and restaurants

--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -13,7 +13,9 @@
       %p No reviews
 
     = link_to restaurant.name, restaurant_path(restaurant)
-    = link_to("Edit #{restaurant.name}", edit_restaurant_path(restaurant))
+
+    - if current_user && current_user.id == restaurant.user_id
+      = link_to("Edit #{restaurant.name}", edit_restaurant_path(restaurant))
     = link_to("Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete)
     = link_to("Review #{restaurant.name}", new_restaurant_review_path(restaurant))
 
@@ -21,4 +23,5 @@
   %h1 No restaurants yet!
 
 - if current_user
-  %a(href=new_restaurant_path) Add a restaurant
+  = link_to("Add a restaurant", new_user_restaurant_path(current_user.id))
+  / %a(href=new_user_restaurant_path(current_user.user_id)) Add a restaurant
